--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "mongodb": "^3.5.9",
     "next": "latest",
+    "next-auth": "^3.14.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
