--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "next": "latest",
     "next-auth": "^3.14.5",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "sqlite3": "^5.0.2"
   },
   "license": "MIT"
 }
